import("//printing/buildflags/buildflags.gni")

source_set("manifests") {
  sources = [
    "//electron/atom/app/manifests.cc",
    "//electron/atom/app/manifests.h",
  ]

  include_dirs = [ "//electron" ]

  deps = [
    "//printing/buildflags",
    "//services/proxy_resolver/public/cpp:manifest",
  ]

  if (enable_basic_printing) {
    deps += [ "//components/services/pdf_compositor/public/cpp:manifest" ]
  }

  if (enable_print_preview) {
    deps += [ "//chrome/services/printing/public/cpp:manifest" ]
  }
}
