config("native_mate_config") {
  include_dirs = [ "." ]
}

source_set("native_mate") {
  deps = [
    "//base",
    "//net",
    "//third_party/electron_node:node_lib",
    "//v8:v8_headers",
  ]
  public_configs = [ ":native_mate_config" ]
  sources = [
    "native_mate/arguments.cc",
    "native_mate/arguments.h",
    "native_mate/compat.h",
    "native_mate/constructor.h",
    "native_mate/converter.cc",
    "native_mate/converter.h",
    "native_mate/dictionary.cc",
    "native_mate/dictionary.h",
    "native_mate/function_template.cc",
    "native_mate/function_template.h",
    "native_mate/handle.h",
    "native_mate/object_template_builder.cc",
    "native_mate/object_template_builder.h",
    "native_mate/persistent_dictionary.cc",
    "native_mate/persistent_dictionary.h",
    "native_mate/scoped_persistent.h",
    "native_mate/wrappable.cc",
    "native_mate/wrappable.h",
    "native_mate/wrappable_base.h",
  ]
}
