import("//mojo/public/tools/bindings/mojom.gni")
import("../../../buildflags/buildflags.gni")

mojom("mojo") {
  sources = [ "api.mojom" ]

  public_deps = [
    "//mojo/public/mojom/base",
    "//third_party/blink/public/mojom:mojom_core",
    "//ui/gfx/geometry/mojom",
  ]

  # Needed for component build or we'll get duplicate symbols for many mojom
  # interfaces already included in blink_common.dll
  overridden_deps = [ "//third_party/blink/public/mojom:mojom_core" ]
  component_deps = [ "//third_party/blink/public/common" ]
}
